--- a/md2pages/templates/base.html
+++ b/md2pages/templates/base.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{ title }} - {{ site_title }}</title>
+    <title>{% block page_title %}{{ title }} - {{ site_title }}{% endblock %}</title>
     <link rel="stylesheet" href="{{ base_url }}static/style.css">
 </head>
 <body>
+    {% block header %}
     <header>
-        <h1>{{ site_title }}</h1>
+        <h1>{{ title }}</h1>
     </header>
+    {% endblock %}
     <main>
         {% block content %}{% endblock %}
     </main>
