--- a/md2pages/templates/index.html
+++ b/md2pages/templates/index.html
@@ -1,4 +1,10 @@
 {% extends "base.html" %}
+{% block page_title %}{{ site_title }}{% endblock %}
+{% block header %}
+<header>
+    <h1>{{ site_title }}</h1>
+</header>
+{% endblock %}
 {% block content %}
 <h2>ページ一覧</h2>
 <ul>
